# ai_training

./: Makefile  README.md  pyproject.toml  pytorch_version.txt
.github/ISSUE_TEMPLATE/: question.yml
.github/workflows/: deploy-pages.yml  notebook-test.yml
01_fundamentals/python_basics/: README.md
docs/: ai_career_paths_guide.md  career_path_interactive.html  career_path_interactive.js  career_path_selector.html  career_path_selector.md  case_based_learning_guide.md  deployment_guide.md  index.html  internal_deployment_guide.md  wsl_setup_guide.md
docs/careers/: ai-architect.md  ai-consultant.md  ai-development-director.md  ai-product-manager.md  ai-security-engineer.md  ai-trainer.md  audio-engineer.md  computer-vision-engineer.md  data-engineer.md  data-scientist.md  edge-ai-engineer.md  machine-learning-engineer.md  mlops-engineer.md  nlp-engineer.md  research-scientist.md  robotics-engineer.md
foundations/00_development_setup/: README.md
foundations/00_development_setup/git_basics/: README.md  hands_on.md
foundations/00_development_setup/integration_project/: README.md
foundations/00_development_setup/poetry_basics/: README.md  hands_on.md
foundations/00_development_setup/wsl_basics/: README.md  hands_on.md
learning_paths/consultant/01_ai_overview/: README.md
scripts/: detect_gpu.py  install_pytorch.py
specializations/time_series/01_basics/: README.md
