[tool.poetry]
name = "ai-ds-training-program"
version = "1.0.0"
description = "社内AI/データサイエンス研修プログラム"
authors = ["AI Training Team <training@company.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
# データ処理・分析
numpy = "^1.24.3"
pandas = "^2.0.3"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"

# 深層学習フレームワーク
torch = "^2.0.1"
torchvision = "^0.15.2"

# 可視化
matplotlib = "^3.7.1"
seaborn = "^0.12.2"

# Jupyter環境
jupyter = "^1.0.0"
jupyterlab = "^4.0.2"

# 実験管理
wandb = "^0.15.4"

# その他ユーティリティ
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
# 開発・テスト用
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

# Jupyter用
nbqa = "^1.7.0"
nbval = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*"
] 